src/tests/snapshots/scl__tests__runtime@binop.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/binop.scl
---
exit status: 0
