src/tests/snapshots/scl__tests__runtime@blocks_as_expr.scl-2.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/blocks_as_expr.scl
---

