src/tests/snapshots/scl__tests__runtime@blocks_as_expr.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/blocks_as_expr.scl
---

