src/tests/snapshots/scl__tests__runtime@blocks_as_expr.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/blocks_as_expr.scl
---
exit status: 36
