src/tests/snapshots/scl__tests__runtime@blocks_as_expr.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/runtime/blocks_as_expr.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    name: "main",
                    type_id: TypeId(
                        9,
                    ),
                    body: CheckedBlock {
                        stmts: [
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    0,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: BinOp {
                                        lhs: CheckedExpr {
                                            type_id: TypeId(
                                                2,
                                            ),
                                            lvalue: false,
                                            kind: BinOp {
                                                lhs: CheckedExpr {
                                                    type_id: TypeId(
                                                        2,
                                                    ),
                                                    lvalue: false,
                                                    kind: Block(
                                                        CheckedBlock {
                                                            stmts: [],
                                                            last: Some(
                                                                CheckedExpr {
                                                                    type_id: TypeId(
                                                                        2,
                                                                    ),
                                                                    lvalue: false,
                                                                    kind: BinOp {
                                                                        lhs: CheckedExpr {
                                                                            type_id: TypeId(
                                                                                2,
                                                                            ),
                                                                            lvalue: false,
                                                                            kind: Number(
                                                                                5,
                                                                            ),
                                                                        },
                                                                        op: Add,
                                                                        rhs: CheckedExpr {
                                                                            type_id: TypeId(
                                                                                2,
                                                                            ),
                                                                            lvalue: false,
                                                                            kind: Number(
                                                                                6,
                                                                            ),
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            type_id: TypeId(
                                                                2,
                                                            ),
                                                        },
                                                    ),
                                                },
                                                op: Add,
                                                rhs: CheckedExpr {
                                                    type_id: TypeId(
                                                        2,
                                                    ),
                                                    lvalue: false,
                                                    kind: Number(
                                                        10,
                                                    ),
                                                },
                                            },
                                        },
                                        op: Add,
                                        rhs: CheckedExpr {
                                            type_id: TypeId(
                                                2,
                                            ),
                                            lvalue: false,
                                            kind: Block(
                                                CheckedBlock {
                                                    stmts: [],
                                                    last: Some(
                                                        CheckedExpr {
                                                            type_id: TypeId(
                                                                2,
                                                            ),
                                                            lvalue: false,
                                                            kind: BinOp {
                                                                lhs: CheckedExpr {
                                                                    type_id: TypeId(
                                                                        2,
                                                                    ),
                                                                    lvalue: false,
                                                                    kind: Number(
                                                                        6,
                                                                    ),
                                                                },
                                                                op: Add,
                                                                rhs: CheckedExpr {
                                                                    type_id: TypeId(
                                                                        2,
                                                                    ),
                                                                    lvalue: false,
                                                                    kind: Number(
                                                                        9,
                                                                    ),
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    type_id: TypeId(
                                                        2,
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                },
                            },
                            Return {
                                value: Some(
                                    CheckedExpr {
                                        type_id: TypeId(
                                            2,
                                        ),
                                        lvalue: true,
                                        kind: StackValue(
                                            StackSlotId(
                                                0,
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ],
                        last: None,
                        type_id: TypeId(
                            0,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        2,
                    ),
                    stack_slots: StackSlots {
                        slots: [
                            TypeId(
                                2,
                            ),
                        ],
                    },
                },
            ],
        },
    ],
}
