src/tests/snapshots/scl__tests__runtime@casts.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/casts.scl
---

